# Lab3

Project_1/: CMakeLists.txt  word_cleaner
Project_1/include/: text_utlis.h  word_cleaner.h  word_stats.h
Project_1/src/: main.c  text_utlis.c  word_cleaner.c  word_stats.c
Project_1/tests/: test_text_utlis.c  test_word_stats.c
